--- a/packages/react/public/style.css
+++ b/packages/react/public/style.css
@@ -1,3 +1,4 @@
 body {
-    background: #ffcc00;
+  font-family: 'Inter', sans-serif;
+  font-feature-settings: 'cv05' 1; /* Enable lowercase l with tail */
 }
