--- a/packages/themes/src/base.css
+++ b/packages/themes/src/base.css
@@ -1,3 +1,7 @@
+/*
+Base CSS for all themes
+*/
+
 body {
   font-family: 'Inter', sans-serif;
   font-feature-settings: 'cv05' 1; /* Enable lowercase l with tail */
