--- a/apps/angular-demo/src/styles.css
+++ b/apps/angular-demo/src/styles.css
@@ -1,1 +1,2 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('@ks-digital/designsystem-themes/base.css');
+@import url('@ks-digital/designsystem-themes/forvaltning.css');
