fix(themes): bundle css

--- a/packages/themes/src/base.css
+++ b/packages/themes/src/base.css
@@ -1,4 +1,4 @@
-@import url('@digdir/designsystemet-css');
+@import url('@digdir/designsystemet-css/dist/src/index.css');
 
 /*
 Base CSS for all themes
