--- a/packages/angular/.storybook/styles.css
+++ b/packages/angular/.storybook/styles.css
@@ -1,2 +1,2 @@
 @import url('@ks-digital/designsystem-themes/base.css');
-@import url('@ks-digital/designsystem-themes/forvaltning.css');
+/* Theme is not imported here, it is dynamically applied via preview.ts */
