--- a/packages/themes/src/tailwind-overrides.css
+++ b/packages/themes/src/tailwind-overrides.css
@@ -8,6 +8,12 @@
     border-color: var(--dsc-card-border-color);
   }
 
+  .ds-card :is(h1, h2, h3, h4, h5, h6) a:any-link,
+  .ds-card:is(a:any-link, button, [role='button']) :is(h1, h2, h3, h4, h5, h6) {
+    color: inherit;
+    text-decoration: underline;
+  }
+
   .ds-details {
     border-top-width: var(--dsc-details-border-block-width);
     border-bottom-width: var(--dsc-details-border-block-width);
