chore: correct forvaltning-theme

--- a/packages/themes/src/themes/forvaltning.css
+++ b/packages/themes/src/themes/forvaltning.css
@@ -1,12 +1,3 @@
-/*
-npx @digdir/designsystemet@next tokens create \
---main-colors "accent:#714EEA" "primary:#00042E" \
---neutral-color "#1d252d" \
---support-colors "extra1:#d0aef4" "extra2:#F4ECDF" \
---border-radius 8 \
---theme "forvaltning"
-*/
-
 @charset "UTF-8";
 /*
 build: v1.5.1
@@ -165,21 +156,37 @@ design-tokens: v1.5.1
     --ds-color-extra1-base-contrast-subtle: #2c2534;
     --ds-color-extra1-base-contrast-default: #000000;
     --ds-color-extra2-background-default: #ffffff;
-    --ds-color-extra2-background-tinted: #f8f3eb;
+    --ds-color-extra2-background-tinted: #eff5f4;
     --ds-color-extra2-surface-default: #ffffff;
-    --ds-color-extra2-surface-tinted: #efe8db;
-    --ds-color-extra2-surface-hover: #e0d9cd;
-    --ds-color-extra2-surface-active: #d0c9be;
-    --ds-color-extra2-border-subtle: #c1bbb1;
-    --ds-color-extra2-border-default: #7c7872;
-    --ds-color-extra2-border-strong: #605d58;
-    --ds-color-extra2-text-subtle: #605d58;
-    --ds-color-extra2-text-default: #2d2b29;
-    --ds-color-extra2-base-default: #f4ecdf;
-    --ds-color-extra2-base-hover: #dcd5ca;
-    --ds-color-extra2-base-active: #c6bfb5;
-    --ds-color-extra2-base-contrast-subtle: #514f4a;
-    --ds-color-extra2-base-contrast-default: #000000;
+    --ds-color-extra2-surface-tinted: #e0ebe9;
+    --ds-color-extra2-surface-hover: #cbdeda;
+    --ds-color-extra2-surface-active: #b5d0ca;
+    --ds-color-extra2-border-subtle: #a1c3bc;
+    --ds-color-extra2-border-default: #408477;
+    --ds-color-extra2-border-strong: #156959;
+    --ds-color-extra2-text-subtle: #156959;
+    --ds-color-extra2-text-default: #043229;
+    --ds-color-extra2-base-default: #07604f;
+    --ds-color-extra2-base-hover: #054b3e;
+    --ds-color-extra2-base-active: #04372d;
+    --ds-color-extra2-base-contrast-subtle: #eef4f3;
+    --ds-color-extra2-base-contrast-default: #ffffff;
+    --ds-color-extra3-background-default: #ffffff;
+    --ds-color-extra3-background-tinted: #f8f3eb;
+    --ds-color-extra3-surface-default: #ffffff;
+    --ds-color-extra3-surface-tinted: #efe8db;
+    --ds-color-extra3-surface-hover: #e0d9cd;
+    --ds-color-extra3-surface-active: #d0c9be;
+    --ds-color-extra3-border-subtle: #c1bbb1;
+    --ds-color-extra3-border-default: #7c7872;
+    --ds-color-extra3-border-strong: #605d58;
+    --ds-color-extra3-text-subtle: #605d58;
+    --ds-color-extra3-text-default: #2d2b29;
+    --ds-color-extra3-base-default: #f4ecdf;
+    --ds-color-extra3-base-hover: #dcd5ca;
+    --ds-color-extra3-base-active: #c6bfb5;
+    --ds-color-extra3-base-contrast-subtle: #514f4a;
+    --ds-color-extra3-base-contrast-default: #000000;
     --ds-color-success-background-default: #ffffff;
     --ds-color-success-background-tinted: #ecf6ee;
     --ds-color-success-surface-default: #ffffff;
@@ -318,21 +325,37 @@ design-tokens: v1.5.1
       --ds-color-extra1-base-contrast-subtle: #2c2534;
       --ds-color-extra1-base-contrast-default: #000000;
       --ds-color-extra2-background-default: #ffffff;
-      --ds-color-extra2-background-tinted: #f8f3eb;
+      --ds-color-extra2-background-tinted: #eff5f4;
       --ds-color-extra2-surface-default: #ffffff;
-      --ds-color-extra2-surface-tinted: #efe8db;
-      --ds-color-extra2-surface-hover: #e0d9cd;
-      --ds-color-extra2-surface-active: #d0c9be;
-      --ds-color-extra2-border-subtle: #c1bbb1;
-      --ds-color-extra2-border-default: #7c7872;
-      --ds-color-extra2-border-strong: #605d58;
-      --ds-color-extra2-text-subtle: #605d58;
-      --ds-color-extra2-text-default: #2d2b29;
-      --ds-color-extra2-base-default: #f4ecdf;
-      --ds-color-extra2-base-hover: #dcd5ca;
-      --ds-color-extra2-base-active: #c6bfb5;
-      --ds-color-extra2-base-contrast-subtle: #514f4a;
-      --ds-color-extra2-base-contrast-default: #000000;
+      --ds-color-extra2-surface-tinted: #e0ebe9;
+      --ds-color-extra2-surface-hover: #cbdeda;
+      --ds-color-extra2-surface-active: #b5d0ca;
+      --ds-color-extra2-border-subtle: #a1c3bc;
+      --ds-color-extra2-border-default: #408477;
+      --ds-color-extra2-border-strong: #156959;
+      --ds-color-extra2-text-subtle: #156959;
+      --ds-color-extra2-text-default: #043229;
+      --ds-color-extra2-base-default: #07604f;
+      --ds-color-extra2-base-hover: #054b3e;
+      --ds-color-extra2-base-active: #04372d;
+      --ds-color-extra2-base-contrast-subtle: #eef4f3;
+      --ds-color-extra2-base-contrast-default: #ffffff;
+      --ds-color-extra3-background-default: #ffffff;
+      --ds-color-extra3-background-tinted: #f8f3eb;
+      --ds-color-extra3-surface-default: #ffffff;
+      --ds-color-extra3-surface-tinted: #efe8db;
+      --ds-color-extra3-surface-hover: #e0d9cd;
+      --ds-color-extra3-surface-active: #d0c9be;
+      --ds-color-extra3-border-subtle: #c1bbb1;
+      --ds-color-extra3-border-default: #7c7872;
+      --ds-color-extra3-border-strong: #605d58;
+      --ds-color-extra3-text-subtle: #605d58;
+      --ds-color-extra3-text-default: #2d2b29;
+      --ds-color-extra3-base-default: #f4ecdf;
+      --ds-color-extra3-base-hover: #dcd5ca;
+      --ds-color-extra3-base-active: #c6bfb5;
+      --ds-color-extra3-base-contrast-subtle: #514f4a;
+      --ds-color-extra3-base-contrast-default: #000000;
       --ds-color-success-background-default: #ffffff;
       --ds-color-success-background-tinted: #ecf6ee;
       --ds-color-success-surface-default: #ffffff;
@@ -656,22 +679,38 @@ design-tokens: v1.5.1
     --ds-color-extra1-base-active: #68577a;
     --ds-color-extra1-base-contrast-subtle: #d2d0d5;
     --ds-color-extra1-base-contrast-default: #ffffff;
-    --ds-color-extra2-background-default: #181817;
-    --ds-color-extra2-background-tinted: #201f1e;
-    --ds-color-extra2-surface-default: #292826;
-    --ds-color-extra2-surface-tinted: #2f2e2c;
-    --ds-color-extra2-surface-hover: #373533;
-    --ds-color-extra2-surface-active: #444340;
-    --ds-color-extra2-border-subtle: #52504d;
-    --ds-color-extra2-border-default: #84817c;
-    --ds-color-extra2-border-strong: #aba7a1;
-    --ds-color-extra2-text-subtle: #aba7a1;
-    --ds-color-extra2-text-default: #f1ebe3;
-    --ds-color-extra2-base-default: #151413;
-    --ds-color-extra2-base-hover: #252422;
-    --ds-color-extra2-base-active: #373532;
-    --ds-color-extra2-base-contrast-subtle: #a1a1a1;
-    --ds-color-extra2-base-contrast-default: #ffffff;
+    --ds-color-extra2-background-default: #0d1a17;
+    --ds-color-extra2-background-tinted: #11231e;
+    --ds-color-extra2-surface-default: #152c26;
+    --ds-color-extra2-surface-tinted: #18322c;
+    --ds-color-extra2-surface-hover: #1c3b33;
+    --ds-color-extra2-surface-active: #234a40;
+    --ds-color-extra2-border-subtle: #2a584d;
+    --ds-color-extra2-border-default: #65887f;
+    --ds-color-extra2-border-strong: #95ada7;
+    --ds-color-extra2-text-subtle: #95ada7;
+    --ds-color-extra2-text-default: #e8edec;
+    --ds-color-extra2-base-default: #72a59b;
+    --ds-color-extra2-base-hover: #92b9b1;
+    --ds-color-extra2-base-active: #b1cdc8;
+    --ds-color-extra2-base-contrast-subtle: #0a0f0e;
+    --ds-color-extra2-base-contrast-default: #000000;
+    --ds-color-extra3-background-default: #181817;
+    --ds-color-extra3-background-tinted: #201f1e;
+    --ds-color-extra3-surface-default: #292826;
+    --ds-color-extra3-surface-tinted: #2f2e2c;
+    --ds-color-extra3-surface-hover: #373533;
+    --ds-color-extra3-surface-active: #444340;
+    --ds-color-extra3-border-subtle: #52504d;
+    --ds-color-extra3-border-default: #84817c;
+    --ds-color-extra3-border-strong: #aba7a1;
+    --ds-color-extra3-text-subtle: #aba7a1;
+    --ds-color-extra3-text-default: #f1ebe3;
+    --ds-color-extra3-base-default: #151413;
+    --ds-color-extra3-base-hover: #252422;
+    --ds-color-extra3-base-active: #373532;
+    --ds-color-extra3-base-contrast-subtle: #a1a1a1;
+    --ds-color-extra3-base-contrast-default: #ffffff;
     --ds-color-success-background-default: #0d1b0d;
     --ds-color-success-background-tinted: #112411;
     --ds-color-success-surface-default: #152d15;
@@ -809,22 +848,38 @@ design-tokens: v1.5.1
       --ds-color-extra1-base-active: #68577a;
       --ds-color-extra1-base-contrast-subtle: #d2d0d5;
       --ds-color-extra1-base-contrast-default: #ffffff;
-      --ds-color-extra2-background-default: #181817;
-      --ds-color-extra2-background-tinted: #201f1e;
-      --ds-color-extra2-surface-default: #292826;
-      --ds-color-extra2-surface-tinted: #2f2e2c;
-      --ds-color-extra2-surface-hover: #373533;
-      --ds-color-extra2-surface-active: #444340;
-      --ds-color-extra2-border-subtle: #52504d;
-      --ds-color-extra2-border-default: #84817c;
-      --ds-color-extra2-border-strong: #aba7a1;
-      --ds-color-extra2-text-subtle: #aba7a1;
-      --ds-color-extra2-text-default: #f1ebe3;
-      --ds-color-extra2-base-default: #151413;
-      --ds-color-extra2-base-hover: #252422;
-      --ds-color-extra2-base-active: #373532;
-      --ds-color-extra2-base-contrast-subtle: #a1a1a1;
-      --ds-color-extra2-base-contrast-default: #ffffff;
+      --ds-color-extra2-background-default: #0d1a17;
+      --ds-color-extra2-background-tinted: #11231e;
+      --ds-color-extra2-surface-default: #152c26;
+      --ds-color-extra2-surface-tinted: #18322c;
+      --ds-color-extra2-surface-hover: #1c3b33;
+      --ds-color-extra2-surface-active: #234a40;
+      --ds-color-extra2-border-subtle: #2a584d;
+      --ds-color-extra2-border-default: #65887f;
+      --ds-color-extra2-border-strong: #95ada7;
+      --ds-color-extra2-text-subtle: #95ada7;
+      --ds-color-extra2-text-default: #e8edec;
+      --ds-color-extra2-base-default: #72a59b;
+      --ds-color-extra2-base-hover: #92b9b1;
+      --ds-color-extra2-base-active: #b1cdc8;
+      --ds-color-extra2-base-contrast-subtle: #0a0f0e;
+      --ds-color-extra2-base-contrast-default: #000000;
+      --ds-color-extra3-background-default: #181817;
+      --ds-color-extra3-background-tinted: #201f1e;
+      --ds-color-extra3-surface-default: #292826;
+      --ds-color-extra3-surface-tinted: #2f2e2c;
+      --ds-color-extra3-surface-hover: #373533;
+      --ds-color-extra3-surface-active: #444340;
+      --ds-color-extra3-border-subtle: #52504d;
+      --ds-color-extra3-border-default: #84817c;
+      --ds-color-extra3-border-strong: #aba7a1;
+      --ds-color-extra3-text-subtle: #aba7a1;
+      --ds-color-extra3-text-default: #f1ebe3;
+      --ds-color-extra3-base-default: #151413;
+      --ds-color-extra3-base-hover: #252422;
+      --ds-color-extra3-base-active: #373532;
+      --ds-color-extra3-base-contrast-subtle: #a1a1a1;
+      --ds-color-extra3-base-contrast-default: #ffffff;
       --ds-color-success-background-default: #0d1b0d;
       --ds-color-success-background-tinted: #112411;
       --ds-color-success-surface-default: #152d15;
@@ -1086,6 +1141,32 @@ design-tokens: v1.5.1
     );
     --ds-color-base-contrast-default: var(
       --ds-color-extra2-base-contrast-default
+    );
+  }
+}
+
+@layer ds.theme.color {
+  [data-color='extra3'],
+  [data-color-scheme][data-color='extra3'] {
+    --ds-color-background-default: var(--ds-color-extra3-background-default);
+    --ds-color-background-tinted: var(--ds-color-extra3-background-tinted);
+    --ds-color-surface-default: var(--ds-color-extra3-surface-default);
+    --ds-color-surface-tinted: var(--ds-color-extra3-surface-tinted);
+    --ds-color-surface-hover: var(--ds-color-extra3-surface-hover);
+    --ds-color-surface-active: var(--ds-color-extra3-surface-active);
+    --ds-color-border-subtle: var(--ds-color-extra3-border-subtle);
+    --ds-color-border-default: var(--ds-color-extra3-border-default);
+    --ds-color-border-strong: var(--ds-color-extra3-border-strong);
+    --ds-color-text-subtle: var(--ds-color-extra3-text-subtle);
+    --ds-color-text-default: var(--ds-color-extra3-text-default);
+    --ds-color-base-default: var(--ds-color-extra3-base-default);
+    --ds-color-base-hover: var(--ds-color-extra3-base-hover);
+    --ds-color-base-active: var(--ds-color-extra3-base-active);
+    --ds-color-base-contrast-subtle: var(
+      --ds-color-extra3-base-contrast-subtle
+    );
+    --ds-color-base-contrast-default: var(
+      --ds-color-extra3-base-contrast-default
     );
   }
 }
