--- a/packages/themes/src/themes/minkommune.css
+++ b/packages/themes/src/themes/minkommune.css
@@ -1,14 +1,6 @@
-/*
-npx @digdir/designsystemet@1.5.1 tokens create \--main-colors "primary:#00042E" "accent:#714EEA" \
---neutral-color "#1D252D" \
---support-colors "extra1:#d0aef4" "extra2:#07604F" "extra3:#F4ECDF" \
---border-radius 8 \
---theme "minkommune"
-*/
 @charset "UTF-8";
 /*
-build: v1.5.1
-design-tokens: v1.5.1
+build: v1.7.3
 */
 
 @layer ds.theme.size-mode {
@@ -93,6 +85,34 @@ design-tokens: v1.5.1
     --ds-body-long-md-font-size: var(--ds-font-size-4);
     --ds-body-long-sm-font-size: var(--ds-font-size-3);
     --ds-body-long-xs-font-size: var(--ds-font-size-2);
+
+    @supports (width: round(down, 0.1em, 1px)) {
+      --ds-font-size-1: round(calc(0.75rem * var(--_ds-font-size-factor)), 1px);
+      --ds-font-size-2: round(
+        calc(0.875rem * var(--_ds-font-size-factor)),
+        1px
+      );
+      --ds-font-size-3: round(calc(1rem * var(--_ds-font-size-factor)), 1px);
+      --ds-font-size-4: round(
+        calc(1.125rem * var(--_ds-font-size-factor)),
+        1px
+      );
+      --ds-font-size-5: round(
+        calc(1.3125rem * var(--_ds-font-size-factor)),
+        1px
+      );
+      --ds-font-size-6: round(calc(1.5rem * var(--_ds-font-size-factor)), 1px);
+      --ds-font-size-7: round(
+        calc(1.875rem * var(--_ds-font-size-factor)),
+        1px
+      );
+      --ds-font-size-8: round(calc(2.25rem * var(--_ds-font-size-factor)), 1px);
+      --ds-font-size-9: round(calc(3rem * var(--_ds-font-size-factor)), 1px);
+      --ds-font-size-10: round(
+        calc(3.75rem * var(--_ds-font-size-factor)),
+        1px
+      );
+    }
   }
 }
 @layer ds.theme.color-scheme.light {
@@ -194,38 +214,6 @@ design-tokens: v1.5.1
     --ds-color-extra3-base-active: #c6bfb5;
     --ds-color-extra3-base-contrast-subtle: #514f4a;
     --ds-color-extra3-base-contrast-default: #000000;
-    --ds-color-success-background-default: #ffffff;
-    --ds-color-success-background-tinted: #ecf6ee;
-    --ds-color-success-surface-default: #ffffff;
-    --ds-color-success-surface-tinted: #daeddd;
-    --ds-color-success-surface-hover: #c3e2c7;
-    --ds-color-success-surface-active: #a8d5ae;
-    --ds-color-success-border-subtle: #8fc997;
-    --ds-color-success-border-default: #108c22;
-    --ds-color-success-border-strong: #056d13;
-    --ds-color-success-text-subtle: #056d13;
-    --ds-color-success-text-default: #023409;
-    --ds-color-success-base-default: #068718;
-    --ds-color-success-base-hover: #057014;
-    --ds-color-success-base-active: #045a10;
-    --ds-color-success-base-contrast-subtle: #fafdfb;
-    --ds-color-success-base-contrast-default: #ffffff;
-    --ds-color-danger-background-default: #ffffff;
-    --ds-color-danger-background-tinted: #fbf1f1;
-    --ds-color-danger-surface-default: #ffffff;
-    --ds-color-danger-surface-tinted: #f8e4e4;
-    --ds-color-danger-surface-hover: #f3d2d2;
-    --ds-color-danger-surface-active: #edbfbf;
-    --ds-color-danger-border-subtle: #e8adad;
-    --ds-color-danger-border-default: #ce4d4d;
-    --ds-color-danger-border-strong: #b81a1a;
-    --ds-color-danger-text-subtle: #b81a1a;
-    --ds-color-danger-text-default: #590d0d;
-    --ds-color-danger-base-default: #c01b1b;
-    --ds-color-danger-base-hover: #9b1616;
-    --ds-color-danger-base-active: #791111;
-    --ds-color-danger-base-contrast-subtle: #f7e1e1;
-    --ds-color-danger-base-contrast-default: #ffffff;
     --ds-color-info-background-default: #ffffff;
     --ds-color-info-background-tinted: #edf5fa;
     --ds-color-info-surface-default: #ffffff;
@@ -242,6 +230,22 @@ design-tokens: v1.5.1
     --ds-color-info-base-active: #074a7e;
     --ds-color-info-base-contrast-subtle: #eff6fb;
     --ds-color-info-base-contrast-default: #ffffff;
+    --ds-color-success-background-default: #ffffff;
+    --ds-color-success-background-tinted: #ecf6ee;
+    --ds-color-success-surface-default: #ffffff;
+    --ds-color-success-surface-tinted: #daeddd;
+    --ds-color-success-surface-hover: #c3e2c7;
+    --ds-color-success-surface-active: #a8d5ae;
+    --ds-color-success-border-subtle: #8fc997;
+    --ds-color-success-border-default: #108c22;
+    --ds-color-success-border-strong: #056d13;
+    --ds-color-success-text-subtle: #056d13;
+    --ds-color-success-text-default: #023409;
+    --ds-color-success-base-default: #068718;
+    --ds-color-success-base-hover: #057014;
+    --ds-color-success-base-active: #045a10;
+    --ds-color-success-base-contrast-subtle: #fafdfb;
+    --ds-color-success-base-contrast-default: #ffffff;
     --ds-color-warning-background-default: #ffffff;
     --ds-color-warning-background-tinted: #fcf2e2;
     --ds-color-warning-surface-default: #ffffff;
@@ -258,6 +262,22 @@ design-tokens: v1.5.1
     --ds-color-warning-base-active: #b27614;
     --ds-color-warning-base-contrast-subtle: #271a04;
     --ds-color-warning-base-contrast-default: #000000;
+    --ds-color-danger-background-default: #ffffff;
+    --ds-color-danger-background-tinted: #fbf1f1;
+    --ds-color-danger-surface-default: #ffffff;
+    --ds-color-danger-surface-tinted: #f8e4e4;
+    --ds-color-danger-surface-hover: #f3d2d2;
+    --ds-color-danger-surface-active: #edbfbf;
+    --ds-color-danger-border-subtle: #e8adad;
+    --ds-color-danger-border-default: #ce4d4d;
+    --ds-color-danger-border-strong: #b81a1a;
+    --ds-color-danger-text-subtle: #b81a1a;
+    --ds-color-danger-text-default: #590d0d;
+    --ds-color-danger-base-default: #c01b1b;
+    --ds-color-danger-base-hover: #9b1616;
+    --ds-color-danger-base-active: #791111;
+    --ds-color-danger-base-contrast-subtle: #f7e1e1;
+    --ds-color-danger-base-contrast-default: #ffffff;
     --ds-color-focus-inner: #ffffff;
     --ds-color-focus-outer: #242c34;
     --ds-link-color-visited: #663299;
@@ -363,38 +383,6 @@ design-tokens: v1.5.1
       --ds-color-extra3-base-active: #c6bfb5;
       --ds-color-extra3-base-contrast-subtle: #514f4a;
       --ds-color-extra3-base-contrast-default: #000000;
-      --ds-color-success-background-default: #ffffff;
-      --ds-color-success-background-tinted: #ecf6ee;
-      --ds-color-success-surface-default: #ffffff;
-      --ds-color-success-surface-tinted: #daeddd;
-      --ds-color-success-surface-hover: #c3e2c7;
-      --ds-color-success-surface-active: #a8d5ae;
-      --ds-color-success-border-subtle: #8fc997;
-      --ds-color-success-border-default: #108c22;
-      --ds-color-success-border-strong: #056d13;
-      --ds-color-success-text-subtle: #056d13;
-      --ds-color-success-text-default: #023409;
-      --ds-color-success-base-default: #068718;
-      --ds-color-success-base-hover: #057014;
-      --ds-color-success-base-active: #045a10;
-      --ds-color-success-base-contrast-subtle: #fafdfb;
-      --ds-color-success-base-contrast-default: #ffffff;
-      --ds-color-danger-background-default: #ffffff;
-      --ds-color-danger-background-tinted: #fbf1f1;
-      --ds-color-danger-surface-default: #ffffff;
-      --ds-color-danger-surface-tinted: #f8e4e4;
-      --ds-color-danger-surface-hover: #f3d2d2;
-      --ds-color-danger-surface-active: #edbfbf;
-      --ds-color-danger-border-subtle: #e8adad;
-      --ds-color-danger-border-default: #ce4d4d;
-      --ds-color-danger-border-strong: #b81a1a;
-      --ds-color-danger-text-subtle: #b81a1a;
-      --ds-color-danger-text-default: #590d0d;
-      --ds-color-danger-base-default: #c01b1b;
-      --ds-color-danger-base-hover: #9b1616;
-      --ds-color-danger-base-active: #791111;
-      --ds-color-danger-base-contrast-subtle: #f7e1e1;
-      --ds-color-danger-base-contrast-default: #ffffff;
       --ds-color-info-background-default: #ffffff;
       --ds-color-info-background-tinted: #edf5fa;
       --ds-color-info-surface-default: #ffffff;
@@ -411,6 +399,22 @@ design-tokens: v1.5.1
       --ds-color-info-base-active: #074a7e;
       --ds-color-info-base-contrast-subtle: #eff6fb;
       --ds-color-info-base-contrast-default: #ffffff;
+      --ds-color-success-background-default: #ffffff;
+      --ds-color-success-background-tinted: #ecf6ee;
+      --ds-color-success-surface-default: #ffffff;
+      --ds-color-success-surface-tinted: #daeddd;
+      --ds-color-success-surface-hover: #c3e2c7;
+      --ds-color-success-surface-active: #a8d5ae;
+      --ds-color-success-border-subtle: #8fc997;
+      --ds-color-success-border-default: #108c22;
+      --ds-color-success-border-strong: #056d13;
+      --ds-color-success-text-subtle: #056d13;
+      --ds-color-success-text-default: #023409;
+      --ds-color-success-base-default: #068718;
+      --ds-color-success-base-hover: #057014;
+      --ds-color-success-base-active: #045a10;
+      --ds-color-success-base-contrast-subtle: #fafdfb;
+      --ds-color-success-base-contrast-default: #ffffff;
       --ds-color-warning-background-default: #ffffff;
       --ds-color-warning-background-tinted: #fcf2e2;
       --ds-color-warning-surface-default: #ffffff;
@@ -427,6 +431,22 @@ design-tokens: v1.5.1
       --ds-color-warning-base-active: #b27614;
       --ds-color-warning-base-contrast-subtle: #271a04;
       --ds-color-warning-base-contrast-default: #000000;
+      --ds-color-danger-background-default: #ffffff;
+      --ds-color-danger-background-tinted: #fbf1f1;
+      --ds-color-danger-surface-default: #ffffff;
+      --ds-color-danger-surface-tinted: #f8e4e4;
+      --ds-color-danger-surface-hover: #f3d2d2;
+      --ds-color-danger-surface-active: #edbfbf;
+      --ds-color-danger-border-subtle: #e8adad;
+      --ds-color-danger-border-default: #ce4d4d;
+      --ds-color-danger-border-strong: #b81a1a;
+      --ds-color-danger-text-subtle: #b81a1a;
+      --ds-color-danger-text-default: #590d0d;
+      --ds-color-danger-base-default: #c01b1b;
+      --ds-color-danger-base-hover: #9b1616;
+      --ds-color-danger-base-active: #791111;
+      --ds-color-danger-base-contrast-subtle: #f7e1e1;
+      --ds-color-danger-base-contrast-default: #ffffff;
       --ds-color-focus-inner: #ffffff;
       --ds-color-focus-outer: #242c34;
       --ds-link-color-visited: #663299;
@@ -718,38 +738,6 @@ design-tokens: v1.5.1
     --ds-color-extra3-base-active: #373532;
     --ds-color-extra3-base-contrast-subtle: #a1a1a1;
     --ds-color-extra3-base-contrast-default: #ffffff;
-    --ds-color-success-background-default: #0d1b0d;
-    --ds-color-success-background-tinted: #112411;
-    --ds-color-success-surface-default: #152d15;
-    --ds-color-success-surface-tinted: #183418;
-    --ds-color-success-surface-hover: #1c3c1c;
-    --ds-color-success-surface-active: #244c24;
-    --ds-color-success-border-subtle: #2b5a2b;
-    --ds-color-success-border-default: #528f52;
-    --ds-color-success-border-strong: #89b289;
-    --ds-color-success-text-subtle: #89b289;
-    --ds-color-success-text-default: #e6efe6;
-    --ds-color-success-base-default: #138d24;
-    --ds-color-success-base-hover: #3ca14b;
-    --ds-color-success-base-active: #66b571;
-    --ds-color-success-base-contrast-subtle: #010501;
-    --ds-color-success-base-contrast-default: #000000;
-    --ds-color-danger-background-default: #2a100e;
-    --ds-color-danger-background-tinted: #371512;
-    --ds-color-danger-surface-default: #451b17;
-    --ds-color-danger-surface-tinted: #4f1f1b;
-    --ds-color-danger-surface-hover: #5c241f;
-    --ds-color-danger-surface-active: #722d27;
-    --ds-color-danger-border-subtle: #88352e;
-    --ds-color-danger-border-default: #bc6b64;
-    --ds-color-danger-border-strong: #d19a96;
-    --ds-color-danger-text-subtle: #d19a96;
-    --ds-color-danger-text-default: #f5eae9;
-    --ds-color-danger-base-default: #d76e6e;
-    --ds-color-danger-base-hover: #df8b8b;
-    --ds-color-danger-base-active: #e7a8a8;
-    --ds-color-danger-base-contrast-subtle: #271414;
-    --ds-color-danger-base-contrast-default: #000000;
     --ds-color-info-background-default: #0d1925;
     --ds-color-info-background-tinted: #112130;
     --ds-color-info-surface-default: #15293d;
@@ -766,6 +754,22 @@ design-tokens: v1.5.1
     --ds-color-info-base-active: #77b0dc;
     --ds-color-info-base-contrast-subtle: #050e15;
     --ds-color-info-base-contrast-default: #000000;
+    --ds-color-success-background-default: #0d1b0d;
+    --ds-color-success-background-tinted: #112411;
+    --ds-color-success-surface-default: #152d15;
+    --ds-color-success-surface-tinted: #183418;
+    --ds-color-success-surface-hover: #1c3c1c;
+    --ds-color-success-surface-active: #244c24;
+    --ds-color-success-border-subtle: #2b5a2b;
+    --ds-color-success-border-default: #528f52;
+    --ds-color-success-border-strong: #89b289;
+    --ds-color-success-text-subtle: #89b289;
+    --ds-color-success-text-default: #e6efe6;
+    --ds-color-success-base-default: #138d24;
+    --ds-color-success-base-hover: #3ca14b;
+    --ds-color-success-base-active: #66b571;
+    --ds-color-success-base-contrast-subtle: #010501;
+    --ds-color-success-base-contrast-default: #000000;
     --ds-color-warning-background-default: #1e160d;
     --ds-color-warning-background-tinted: #281e11;
     --ds-color-warning-surface-default: #322616;
@@ -782,6 +786,22 @@ design-tokens: v1.5.1
     --ds-color-warning-base-active: #946211;
     --ds-color-warning-base-contrast-subtle: #e6e2d9;
     --ds-color-warning-base-contrast-default: #ffffff;
+    --ds-color-danger-background-default: #2a100e;
+    --ds-color-danger-background-tinted: #371512;
+    --ds-color-danger-surface-default: #451b17;
+    --ds-color-danger-surface-tinted: #4f1f1b;
+    --ds-color-danger-surface-hover: #5c241f;
+    --ds-color-danger-surface-active: #722d27;
+    --ds-color-danger-border-subtle: #88352e;
+    --ds-color-danger-border-default: #bc6b64;
+    --ds-color-danger-border-strong: #d19a96;
+    --ds-color-danger-text-subtle: #d19a96;
+    --ds-color-danger-text-default: #f5eae9;
+    --ds-color-danger-base-default: #d76e6e;
+    --ds-color-danger-base-hover: #df8b8b;
+    --ds-color-danger-base-active: #e7a8a8;
+    --ds-color-danger-base-contrast-subtle: #271414;
+    --ds-color-danger-base-contrast-default: #000000;
     --ds-color-focus-inner: #14181c;
     --ds-color-focus-outer: #ececed;
     --ds-link-color-visited: #b49acd;
@@ -887,38 +907,6 @@ design-tokens: v1.5.1
       --ds-color-extra3-base-active: #373532;
       --ds-color-extra3-base-contrast-subtle: #a1a1a1;
       --ds-color-extra3-base-contrast-default: #ffffff;
-      --ds-color-success-background-default: #0d1b0d;
-      --ds-color-success-background-tinted: #112411;
-      --ds-color-success-surface-default: #152d15;
-      --ds-color-success-surface-tinted: #183418;
-      --ds-color-success-surface-hover: #1c3c1c;
-      --ds-color-success-surface-active: #244c24;
-      --ds-color-success-border-subtle: #2b5a2b;
-      --ds-color-success-border-default: #528f52;
-      --ds-color-success-border-strong: #89b289;
-      --ds-color-success-text-subtle: #89b289;
-      --ds-color-success-text-default: #e6efe6;
-      --ds-color-success-base-default: #138d24;
-      --ds-color-success-base-hover: #3ca14b;
-      --ds-color-success-base-active: #66b571;
-      --ds-color-success-base-contrast-subtle: #010501;
-      --ds-color-success-base-contrast-default: #000000;
-      --ds-color-danger-background-default: #2a100e;
-      --ds-color-danger-background-tinted: #371512;
-      --ds-color-danger-surface-default: #451b17;
-      --ds-color-danger-surface-tinted: #4f1f1b;
-      --ds-color-danger-surface-hover: #5c241f;
-      --ds-color-danger-surface-active: #722d27;
-      --ds-color-danger-border-subtle: #88352e;
-      --ds-color-danger-border-default: #bc6b64;
-      --ds-color-danger-border-strong: #d19a96;
-      --ds-color-danger-text-subtle: #d19a96;
-      --ds-color-danger-text-default: #f5eae9;
-      --ds-color-danger-base-default: #d76e6e;
-      --ds-color-danger-base-hover: #df8b8b;
-      --ds-color-danger-base-active: #e7a8a8;
-      --ds-color-danger-base-contrast-subtle: #271414;
-      --ds-color-danger-base-contrast-default: #000000;
       --ds-color-info-background-default: #0d1925;
       --ds-color-info-background-tinted: #112130;
       --ds-color-info-surface-default: #15293d;
@@ -935,6 +923,22 @@ design-tokens: v1.5.1
       --ds-color-info-base-active: #77b0dc;
       --ds-color-info-base-contrast-subtle: #050e15;
       --ds-color-info-base-contrast-default: #000000;
+      --ds-color-success-background-default: #0d1b0d;
+      --ds-color-success-background-tinted: #112411;
+      --ds-color-success-surface-default: #152d15;
+      --ds-color-success-surface-tinted: #183418;
+      --ds-color-success-surface-hover: #1c3c1c;
+      --ds-color-success-surface-active: #244c24;
+      --ds-color-success-border-subtle: #2b5a2b;
+      --ds-color-success-border-default: #528f52;
+      --ds-color-success-border-strong: #89b289;
+      --ds-color-success-text-subtle: #89b289;
+      --ds-color-success-text-default: #e6efe6;
+      --ds-color-success-base-default: #138d24;
+      --ds-color-success-base-hover: #3ca14b;
+      --ds-color-success-base-active: #66b571;
+      --ds-color-success-base-contrast-subtle: #010501;
+      --ds-color-success-base-contrast-default: #000000;
       --ds-color-warning-background-default: #1e160d;
       --ds-color-warning-background-tinted: #281e11;
       --ds-color-warning-surface-default: #322616;
@@ -951,6 +955,22 @@ design-tokens: v1.5.1
       --ds-color-warning-base-active: #946211;
       --ds-color-warning-base-contrast-subtle: #e6e2d9;
       --ds-color-warning-base-contrast-default: #ffffff;
+      --ds-color-danger-background-default: #2a100e;
+      --ds-color-danger-background-tinted: #371512;
+      --ds-color-danger-surface-default: #451b17;
+      --ds-color-danger-surface-tinted: #4f1f1b;
+      --ds-color-danger-surface-hover: #5c241f;
+      --ds-color-danger-surface-active: #722d27;
+      --ds-color-danger-border-subtle: #88352e;
+      --ds-color-danger-border-default: #bc6b64;
+      --ds-color-danger-border-strong: #d19a96;
+      --ds-color-danger-text-subtle: #d19a96;
+      --ds-color-danger-text-default: #f5eae9;
+      --ds-color-danger-base-default: #d76e6e;
+      --ds-color-danger-base-hover: #df8b8b;
+      --ds-color-danger-base-active: #e7a8a8;
+      --ds-color-danger-base-contrast-subtle: #271414;
+      --ds-color-danger-base-contrast-default: #000000;
       --ds-color-focus-inner: #14181c;
       --ds-color-focus-outer: #ececed;
       --ds-link-color-visited: #b49acd;
