--- a/packages/themes/src/themes/ledsagerbevis.css
+++ b/packages/themes/src/themes/ledsagerbevis.css
@@ -1,7 +1,6 @@
 @charset "UTF-8";
 /*
-build: v1.7.1
-design-tokens: v1.7.3
+build: v1.7.3
 */
 
 @layer ds.theme.size-mode {
@@ -151,6 +150,22 @@ design-tokens: v1.7.3
     --ds-color-neutral-base-active: #424745;
     --ds-color-neutral-base-contrast-subtle: #b3b5b5;
     --ds-color-neutral-base-contrast-default: #ffffff;
+    --ds-color-support1-background-default: #ffffff;
+    --ds-color-support1-background-tinted: #e9f7f3;
+    --ds-color-support1-surface-default: #ffffff;
+    --ds-color-support1-surface-tinted: #d3eee6;
+    --ds-color-support1-surface-hover: #b6e3d6;
+    --ds-color-support1-surface-active: #96d7c4;
+    --ds-color-support1-border-subtle: #77cbb2;
+    --ds-color-support1-border-default: #158967;
+    --ds-color-support1-border-strong: #106a50;
+    --ds-color-support1-text-subtle: #106a50;
+    --ds-color-support1-text-default: #083225;
+    --ds-color-support1-base-default: #1aa87e;
+    --ds-color-support1-base-hover: #4dbb9b;
+    --ds-color-support1-base-active: #7eceb7;
+    --ds-color-support1-base-contrast-subtle: #010605;
+    --ds-color-support1-base-contrast-default: #000000;
     --ds-color-info-background-default: #ffffff;
     --ds-color-info-background-tinted: #edf5fa;
     --ds-color-info-surface-default: #ffffff;
@@ -256,6 +271,22 @@ design-tokens: v1.7.3
       --ds-color-neutral-base-active: #424745;
       --ds-color-neutral-base-contrast-subtle: #b3b5b5;
       --ds-color-neutral-base-contrast-default: #ffffff;
+      --ds-color-support1-background-default: #ffffff;
+      --ds-color-support1-background-tinted: #e9f7f3;
+      --ds-color-support1-surface-default: #ffffff;
+      --ds-color-support1-surface-tinted: #d3eee6;
+      --ds-color-support1-surface-hover: #b6e3d6;
+      --ds-color-support1-surface-active: #96d7c4;
+      --ds-color-support1-border-subtle: #77cbb2;
+      --ds-color-support1-border-default: #158967;
+      --ds-color-support1-border-strong: #106a50;
+      --ds-color-support1-text-subtle: #106a50;
+      --ds-color-support1-text-default: #083225;
+      --ds-color-support1-base-default: #1aa87e;
+      --ds-color-support1-base-hover: #4dbb9b;
+      --ds-color-support1-base-active: #7eceb7;
+      --ds-color-support1-base-contrast-subtle: #010605;
+      --ds-color-support1-base-contrast-default: #000000;
       --ds-color-info-background-default: #ffffff;
       --ds-color-info-background-tinted: #edf5fa;
       --ds-color-info-surface-default: #ffffff;
@@ -547,6 +578,22 @@ design-tokens: v1.7.3
     --ds-color-neutral-base-active: #7e8281;
     --ds-color-neutral-base-contrast-subtle: #1c1c1c;
     --ds-color-neutral-base-contrast-default: #000000;
+    --ds-color-support1-background-default: #0e1a15;
+    --ds-color-support1-background-tinted: #12231c;
+    --ds-color-support1-surface-default: #172c24;
+    --ds-color-support1-surface-tinted: #1a3229;
+    --ds-color-support1-surface-hover: #1e3b30;
+    --ds-color-support1-surface-active: #264a3c;
+    --ds-color-support1-border-subtle: #2d5848;
+    --ds-color-support1-border-default: #498e73;
+    --ds-color-support1-border-strong: #76b49c;
+    --ds-color-support1-text-subtle: #76b49c;
+    --ds-color-support1-text-default: #e2efea;
+    --ds-color-support1-base-default: #10684e;
+    --ds-color-support1-base-hover: #0d523e;
+    --ds-color-support1-base-active: #0a3e2e;
+    --ds-color-support1-base-contrast-subtle: #fbfcfc;
+    --ds-color-support1-base-contrast-default: #ffffff;
     --ds-color-info-background-default: #0d1925;
     --ds-color-info-background-tinted: #112130;
     --ds-color-info-surface-default: #15293d;
@@ -652,6 +699,22 @@ design-tokens: v1.7.3
       --ds-color-neutral-base-active: #7e8281;
       --ds-color-neutral-base-contrast-subtle: #1c1c1c;
       --ds-color-neutral-base-contrast-default: #000000;
+      --ds-color-support1-background-default: #0e1a15;
+      --ds-color-support1-background-tinted: #12231c;
+      --ds-color-support1-surface-default: #172c24;
+      --ds-color-support1-surface-tinted: #1a3229;
+      --ds-color-support1-surface-hover: #1e3b30;
+      --ds-color-support1-surface-active: #264a3c;
+      --ds-color-support1-border-subtle: #2d5848;
+      --ds-color-support1-border-default: #498e73;
+      --ds-color-support1-border-strong: #76b49c;
+      --ds-color-support1-text-subtle: #76b49c;
+      --ds-color-support1-text-default: #e2efea;
+      --ds-color-support1-base-default: #10684e;
+      --ds-color-support1-base-hover: #0d523e;
+      --ds-color-support1-base-active: #0a3e2e;
+      --ds-color-support1-base-contrast-subtle: #fbfcfc;
+      --ds-color-support1-base-contrast-default: #ffffff;
       --ds-color-info-background-default: #0d1925;
       --ds-color-info-background-tinted: #112130;
       --ds-color-info-surface-default: #15293d;
@@ -937,6 +1000,32 @@ design-tokens: v1.7.3
     );
     --ds-color-base-contrast-default: var(
       --ds-color-success-base-contrast-default
+    );
+  }
+}
+
+@layer ds.theme.color {
+  [data-color='support1'],
+  [data-color-scheme][data-color='support1'] {
+    --ds-color-background-default: var(--ds-color-support1-background-default);
+    --ds-color-background-tinted: var(--ds-color-support1-background-tinted);
+    --ds-color-surface-default: var(--ds-color-support1-surface-default);
+    --ds-color-surface-tinted: var(--ds-color-support1-surface-tinted);
+    --ds-color-surface-hover: var(--ds-color-support1-surface-hover);
+    --ds-color-surface-active: var(--ds-color-support1-surface-active);
+    --ds-color-border-subtle: var(--ds-color-support1-border-subtle);
+    --ds-color-border-default: var(--ds-color-support1-border-default);
+    --ds-color-border-strong: var(--ds-color-support1-border-strong);
+    --ds-color-text-subtle: var(--ds-color-support1-text-subtle);
+    --ds-color-text-default: var(--ds-color-support1-text-default);
+    --ds-color-base-default: var(--ds-color-support1-base-default);
+    --ds-color-base-hover: var(--ds-color-support1-base-hover);
+    --ds-color-base-active: var(--ds-color-support1-base-active);
+    --ds-color-base-contrast-subtle: var(
+      --ds-color-support1-base-contrast-subtle
+    );
+    --ds-color-base-contrast-default: var(
+      --ds-color-support1-base-contrast-default
     );
   }
 }
