--- a/packages/themes/src/themes/minkommune.css
+++ b/packages/themes/src/themes/minkommune.css
@@ -1,7 +1,6 @@
 @charset "UTF-8";
 /*
-build: v1.7.1
-design-tokens: v1.7.3
+build: v1.7.3
 */
 
 @layer ds.theme.size-mode {
@@ -151,6 +150,22 @@ design-tokens: v1.7.3
     --ds-color-neutral-base-active: #41484f;
     --ds-color-neutral-base-contrast-subtle: #b5b7ba;
     --ds-color-neutral-base-contrast-default: #ffffff;
+    --ds-color-support1-background-default: #ffffff;
+    --ds-color-support1-background-tinted: #f5f2fd;
+    --ds-color-support1-surface-default: #ffffff;
+    --ds-color-support1-surface-tinted: #ebe6fc;
+    --ds-color-support1-surface-hover: #ddd5fa;
+    --ds-color-support1-surface-active: #cfc3f8;
+    --ds-color-support1-border-subtle: #c1b2f6;
+    --ds-color-support1-border-default: #8060ec;
+    --ds-color-support1-border-strong: #6244cb;
+    --ds-color-support1-text-subtle: #6244cb;
+    --ds-color-support1-text-default: #2e2060;
+    --ds-color-support1-base-default: #714eea;
+    --ds-color-support1-base-hover: #5d40c0;
+    --ds-color-support1-base-active: #493297;
+    --ds-color-support1-base-contrast-subtle: #f3f0fd;
+    --ds-color-support1-base-contrast-default: #ffffff;
     --ds-color-info-background-default: #ffffff;
     --ds-color-info-background-tinted: #edf5fa;
     --ds-color-info-surface-default: #ffffff;
@@ -256,6 +271,22 @@ design-tokens: v1.7.3
       --ds-color-neutral-base-active: #41484f;
       --ds-color-neutral-base-contrast-subtle: #b5b7ba;
       --ds-color-neutral-base-contrast-default: #ffffff;
+      --ds-color-support1-background-default: #ffffff;
+      --ds-color-support1-background-tinted: #f5f2fd;
+      --ds-color-support1-surface-default: #ffffff;
+      --ds-color-support1-surface-tinted: #ebe6fc;
+      --ds-color-support1-surface-hover: #ddd5fa;
+      --ds-color-support1-surface-active: #cfc3f8;
+      --ds-color-support1-border-subtle: #c1b2f6;
+      --ds-color-support1-border-default: #8060ec;
+      --ds-color-support1-border-strong: #6244cb;
+      --ds-color-support1-text-subtle: #6244cb;
+      --ds-color-support1-text-default: #2e2060;
+      --ds-color-support1-base-default: #714eea;
+      --ds-color-support1-base-hover: #5d40c0;
+      --ds-color-support1-base-active: #493297;
+      --ds-color-support1-base-contrast-subtle: #f3f0fd;
+      --ds-color-support1-base-contrast-default: #ffffff;
       --ds-color-info-background-default: #ffffff;
       --ds-color-info-background-tinted: #edf5fa;
       --ds-color-info-surface-default: #ffffff;
@@ -547,6 +578,22 @@ design-tokens: v1.7.3
     --ds-color-neutral-base-active: #7d8286;
     --ds-color-neutral-base-contrast-subtle: #1b1b1c;
     --ds-color-neutral-base-contrast-default: #000000;
+    --ds-color-support1-background-default: #18152b;
+    --ds-color-support1-background-tinted: #201b39;
+    --ds-color-support1-surface-default: #282248;
+    --ds-color-support1-surface-tinted: #2e2853;
+    --ds-color-support1-surface-hover: #362e61;
+    --ds-color-support1-surface-active: #443a79;
+    --ds-color-support1-border-subtle: #514590;
+    --ds-color-support1-border-default: #8375cf;
+    --ds-color-support1-border-strong: #aaa0de;
+    --ds-color-support1-text-subtle: #aaa0de;
+    --ds-color-support1-text-default: #edebf8;
+    --ds-color-support1-base-default: #896cee;
+    --ds-color-support1-base-hover: #9f87f1;
+    --ds-color-support1-base-active: #b3a0f4;
+    --ds-color-support1-base-contrast-subtle: #100d1c;
+    --ds-color-support1-base-contrast-default: #000000;
     --ds-color-info-background-default: #0d1925;
     --ds-color-info-background-tinted: #112130;
     --ds-color-info-surface-default: #15293d;
@@ -652,6 +699,22 @@ design-tokens: v1.7.3
       --ds-color-neutral-base-active: #7d8286;
       --ds-color-neutral-base-contrast-subtle: #1b1b1c;
       --ds-color-neutral-base-contrast-default: #000000;
+      --ds-color-support1-background-default: #18152b;
+      --ds-color-support1-background-tinted: #201b39;
+      --ds-color-support1-surface-default: #282248;
+      --ds-color-support1-surface-tinted: #2e2853;
+      --ds-color-support1-surface-hover: #362e61;
+      --ds-color-support1-surface-active: #443a79;
+      --ds-color-support1-border-subtle: #514590;
+      --ds-color-support1-border-default: #8375cf;
+      --ds-color-support1-border-strong: #aaa0de;
+      --ds-color-support1-text-subtle: #aaa0de;
+      --ds-color-support1-text-default: #edebf8;
+      --ds-color-support1-base-default: #896cee;
+      --ds-color-support1-base-hover: #9f87f1;
+      --ds-color-support1-base-active: #b3a0f4;
+      --ds-color-support1-base-contrast-subtle: #100d1c;
+      --ds-color-support1-base-contrast-default: #000000;
       --ds-color-info-background-default: #0d1925;
       --ds-color-info-background-tinted: #112130;
       --ds-color-info-surface-default: #15293d;
@@ -937,6 +1000,32 @@ design-tokens: v1.7.3
     );
     --ds-color-base-contrast-default: var(
       --ds-color-success-base-contrast-default
+    );
+  }
+}
+
+@layer ds.theme.color {
+  [data-color='support1'],
+  [data-color-scheme][data-color='support1'] {
+    --ds-color-background-default: var(--ds-color-support1-background-default);
+    --ds-color-background-tinted: var(--ds-color-support1-background-tinted);
+    --ds-color-surface-default: var(--ds-color-support1-surface-default);
+    --ds-color-surface-tinted: var(--ds-color-support1-surface-tinted);
+    --ds-color-surface-hover: var(--ds-color-support1-surface-hover);
+    --ds-color-surface-active: var(--ds-color-support1-surface-active);
+    --ds-color-border-subtle: var(--ds-color-support1-border-subtle);
+    --ds-color-border-default: var(--ds-color-support1-border-default);
+    --ds-color-border-strong: var(--ds-color-support1-border-strong);
+    --ds-color-text-subtle: var(--ds-color-support1-text-subtle);
+    --ds-color-text-default: var(--ds-color-support1-text-default);
+    --ds-color-base-default: var(--ds-color-support1-base-default);
+    --ds-color-base-hover: var(--ds-color-support1-base-hover);
+    --ds-color-base-active: var(--ds-color-support1-base-active);
+    --ds-color-base-contrast-subtle: var(
+      --ds-color-support1-base-contrast-subtle
+    );
+    --ds-color-base-contrast-default: var(
+      --ds-color-support1-base-contrast-default
     );
   }
 }
