--- a/packages/themes/src/themes/tilskudd.css
+++ b/packages/themes/src/themes/tilskudd.css
@@ -1,7 +1,6 @@
 @charset "UTF-8";
 /*
-build: v1.7.1
-design-tokens: v1.7.3
+build: v1.7.3
 */
 
 @layer ds.theme.size-mode {
@@ -151,6 +150,22 @@ design-tokens: v1.7.3
     --ds-color-neutral-base-active: #cbd6ca;
     --ds-color-neutral-base-contrast-subtle: #b7c7b7;
     --ds-color-neutral-base-contrast-default: #fafdff;
+    --ds-color-support1-background-default: #ffffff;
+    --ds-color-support1-background-tinted: #f3f3f3;
+    --ds-color-support1-surface-default: #ffffff;
+    --ds-color-support1-surface-tinted: #e8e8e8;
+    --ds-color-support1-surface-hover: #dadada;
+    --ds-color-support1-surface-active: #cacaca;
+    --ds-color-support1-border-subtle: #bcbcbc;
+    --ds-color-support1-border-default: #797979;
+    --ds-color-support1-border-strong: #5d5d5d;
+    --ds-color-support1-text-subtle: #5d5d5d;
+    --ds-color-support1-text-default: #2b2b2b;
+    --ds-color-support1-base-default: #ffffff;
+    --ds-color-support1-base-hover: #e8e8e8;
+    --ds-color-support1-base-active: #d1d1d1;
+    --ds-color-support1-base-contrast-subtle: #5e5e5e;
+    --ds-color-support1-base-contrast-default: #000000;
     --ds-color-info-background-default: #fafdff;
     --ds-color-info-background-tinted: #f0ebf5;
     --ds-color-info-surface-default: #fafdff;
@@ -256,6 +271,22 @@ design-tokens: v1.7.3
       --ds-color-neutral-base-active: #cbd6ca;
       --ds-color-neutral-base-contrast-subtle: #b7c7b7;
       --ds-color-neutral-base-contrast-default: #fafdff;
+      --ds-color-support1-background-default: #ffffff;
+      --ds-color-support1-background-tinted: #f3f3f3;
+      --ds-color-support1-surface-default: #ffffff;
+      --ds-color-support1-surface-tinted: #e8e8e8;
+      --ds-color-support1-surface-hover: #dadada;
+      --ds-color-support1-surface-active: #cacaca;
+      --ds-color-support1-border-subtle: #bcbcbc;
+      --ds-color-support1-border-default: #797979;
+      --ds-color-support1-border-strong: #5d5d5d;
+      --ds-color-support1-text-subtle: #5d5d5d;
+      --ds-color-support1-text-default: #2b2b2b;
+      --ds-color-support1-base-default: #ffffff;
+      --ds-color-support1-base-hover: #e8e8e8;
+      --ds-color-support1-base-active: #d1d1d1;
+      --ds-color-support1-base-contrast-subtle: #5e5e5e;
+      --ds-color-support1-base-contrast-default: #000000;
       --ds-color-info-background-default: #fafdff;
       --ds-color-info-background-tinted: #f0ebf5;
       --ds-color-info-surface-default: #fafdff;
@@ -547,6 +578,22 @@ design-tokens: v1.7.3
     --ds-color-neutral-base-active: #737773;
     --ds-color-neutral-base-contrast-subtle: #131313;
     --ds-color-neutral-base-contrast-default: #000000;
+    --ds-color-support1-background-default: #181818;
+    --ds-color-support1-background-tinted: #1f1f1f;
+    --ds-color-support1-surface-default: #282828;
+    --ds-color-support1-surface-tinted: #2e2e2e;
+    --ds-color-support1-surface-hover: #353535;
+    --ds-color-support1-surface-active: #434343;
+    --ds-color-support1-border-subtle: #505050;
+    --ds-color-support1-border-default: #818181;
+    --ds-color-support1-border-strong: #a8a8a8;
+    --ds-color-support1-text-subtle: #a8a8a8;
+    --ds-color-support1-text-default: #ececec;
+    --ds-color-support1-base-default: #000000;
+    --ds-color-support1-base-hover: #181818;
+    --ds-color-support1-base-active: #282828;
+    --ds-color-support1-base-contrast-subtle: #919191;
+    --ds-color-support1-base-contrast-default: #ffffff;
     --ds-color-info-background-default: #1d122e;
     --ds-color-info-background-tinted: #26183c;
     --ds-color-info-surface-default: #301e4c;
@@ -652,6 +699,22 @@ design-tokens: v1.7.3
       --ds-color-neutral-base-active: #737773;
       --ds-color-neutral-base-contrast-subtle: #131313;
       --ds-color-neutral-base-contrast-default: #000000;
+      --ds-color-support1-background-default: #181818;
+      --ds-color-support1-background-tinted: #1f1f1f;
+      --ds-color-support1-surface-default: #282828;
+      --ds-color-support1-surface-tinted: #2e2e2e;
+      --ds-color-support1-surface-hover: #353535;
+      --ds-color-support1-surface-active: #434343;
+      --ds-color-support1-border-subtle: #505050;
+      --ds-color-support1-border-default: #818181;
+      --ds-color-support1-border-strong: #a8a8a8;
+      --ds-color-support1-text-subtle: #a8a8a8;
+      --ds-color-support1-text-default: #ececec;
+      --ds-color-support1-base-default: #000000;
+      --ds-color-support1-base-hover: #181818;
+      --ds-color-support1-base-active: #282828;
+      --ds-color-support1-base-contrast-subtle: #919191;
+      --ds-color-support1-base-contrast-default: #ffffff;
       --ds-color-info-background-default: #1d122e;
       --ds-color-info-background-tinted: #26183c;
       --ds-color-info-surface-default: #301e4c;
@@ -937,6 +1000,32 @@ design-tokens: v1.7.3
     );
     --ds-color-base-contrast-default: var(
       --ds-color-success-base-contrast-default
+    );
+  }
+}
+
+@layer ds.theme.color {
+  [data-color='support1'],
+  [data-color-scheme][data-color='support1'] {
+    --ds-color-background-default: var(--ds-color-support1-background-default);
+    --ds-color-background-tinted: var(--ds-color-support1-background-tinted);
+    --ds-color-surface-default: var(--ds-color-support1-surface-default);
+    --ds-color-surface-tinted: var(--ds-color-support1-surface-tinted);
+    --ds-color-surface-hover: var(--ds-color-support1-surface-hover);
+    --ds-color-surface-active: var(--ds-color-support1-surface-active);
+    --ds-color-border-subtle: var(--ds-color-support1-border-subtle);
+    --ds-color-border-default: var(--ds-color-support1-border-default);
+    --ds-color-border-strong: var(--ds-color-support1-border-strong);
+    --ds-color-text-subtle: var(--ds-color-support1-text-subtle);
+    --ds-color-text-default: var(--ds-color-support1-text-default);
+    --ds-color-base-default: var(--ds-color-support1-base-default);
+    --ds-color-base-hover: var(--ds-color-support1-base-hover);
+    --ds-color-base-active: var(--ds-color-support1-base-active);
+    --ds-color-base-contrast-subtle: var(
+      --ds-color-support1-base-contrast-subtle
+    );
+    --ds-color-base-contrast-default: var(
+      --ds-color-support1-base-contrast-default
     );
   }
 }
